[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://menus/PlayerDeathMenu.gd" type="Script" id=2]
[ext_resource path="res://ui/BaseButton.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("FadedBackground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadedBackground:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 180 ), Vector2( 0, 180 ), Vector2( 0, 0 ) ]
}

[node name="PlayerDeathMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadedBackground" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 180.0
margin_bottom = 180.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 172.0
custom_constants/separation = 48
alignment = 1

[node name="TextWrap" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 304.0
margin_bottom = 22.0

[node name="TextLabel" type="Label" parent="MarginContainer/VBoxContainer/TextWrap"]
margin_right = 304.0
margin_bottom = 6.0
text = "You died!"
align = 1

[node name="ButtonWrap" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 88.0
margin_top = 70.0
margin_right = 216.0
margin_bottom = 148.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 4
custom_constants/separation = 12

[node name="RestartButton" parent="MarginContainer/VBoxContainer/ButtonWrap" instance=ExtResource( 3 )]
margin_right = 128.0
margin_bottom = 18.0
text = "Restart"

[node name="MainMenuButton" parent="MarginContainer/VBoxContainer/ButtonWrap" instance=ExtResource( 3 )]
margin_top = 30.0
margin_right = 128.0
margin_bottom = 48.0
text = "Main Menu"

[node name="QuitButton" parent="MarginContainer/VBoxContainer/ButtonWrap" instance=ExtResource( 3 )]
margin_top = 60.0
margin_right = 128.0
margin_bottom = 78.0
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 1 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonWrap/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonWrap/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonWrap/QuitButton" to="." method="_on_QuitButton_pressed"]
